--- a/index.html
+++ b/index.html
@@ -353,18 +353,18 @@
 	<section>
 	<h2>🖤 💜</h2>
 	
-	CONGRATULATIONS SATIN 🙌
+	<span>CONGRATULATIONS SATIN 🙌
 	SALAMAT SA LAHAT NG MASASAYANG MGA MEMORIES 
 	SANA MAABOT NYO YUNG MGA PANGARAP NYO AT SALAMAT PO SA LAHAT NG NAGING MGA GURO NAMIN  SOBRANG COOL  NYO PONG TEACHER MAMIMISS PO NAMIN KAYO, MAG-IINGAT DIN  PO KAYONG LAHAT. 
-	CONGRATULATIONS PO ULIT. 💕
+	CONGRATULATIONS PO ULIT. 💕</span>
 	
 	<h2> kimchi.</h2>
 	
-	Congrats ICT 2, thank you sa lahat ng memories and lessons na binigay nyo sakin and sa iba nating classmates. Good luck sa college life at sa kanya-kanya nating journey, sana walang makalimot hehehe. Keep safe sa lahat and congrats sa best section I had!! &lt;333
-	 
+	<span>Congrats ICT 2, thank you sa lahat ng memories and lessons na binigay nyo sakin and sa iba nating classmates. Good luck sa college life at sa kanya-kanya nating journey, sana walang makalimot hehehe. Keep safe sa lahat and congrats sa best section I had!! &lt;333
+	 </span>
 	<h2>hanger.</h2>
 	
-	congrats congrats 👏👏👏 
+	<span>congrats congrats 👏👏👏 </span>
 	</h2>
 	<span></span>
 	</section>
