--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 	
 	</div>
 	<div class="footer">
-	<img class="img" 
+	<img class="img introduction" 
 	src="https://media.discordapp.net/attachments/876422377548963890/879305364410089572/Untitled-1.jpg"></img>
 	</div>
 	<div class="loading-div">
