--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@
 	var inter = setInterval(countprogress, 100);
 var toolong = setTimeout(() => {
 progress.innerHTML = "169%";
-setTimeout(kill, 3000)
-}, 20*1000)
+setTimeout(kill, 3000);
+}, 10*1000);
 	
 	let imggg = document.querySelector("#poster");
 	imggg.addEventListener('load', function() {
