--- a/index.html
+++ b/index.html
@@ -437,8 +437,7 @@
 	
 	</div>
 	<div class="footer">
-	<img class="img introduction" 
-	src="https://media.discordapp.net/attachments/876422377548963890/879305364410089572/Untitled-1.jpg"></img>
+	<img class="img introduction" src="https://media.discordapp.net/attachments/876422377548963890/879696427134091374/Untitled-1.jpg"></img>
 	</div>
 	<div class="loading-div">
 		<section class="fixed">
